[package]
authors = ["Weiyuan Wu <weiyuan@crows.land>"]
description = "Rust Library for the Binance API (Async)"
documentation = "https://docs.rs/crate/binance-async"
edition = "2018"
keywords = ["cryptocurrency", "trading", "binance", "async"]
license = "MIT"
name = "binance-async"
readme = "README.md"
repository = "https://github.com/dovahcrow/binance-async-rs"
version = "0.3.0"

[features]
print-response = []
zero-copy = ["owning_ref"]

[lib]
name = "binance_async"
path = "src/lib.rs"

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
fehler = "1"
futures = "0.3"
hex = "0.4"
hmac = "0.12"
http = "0.2"
log = "0.4"
paste = "1"
reqwest = "0.11"
rust_decimal = {version = "1", features = ["serde-with-str"]}
serde = {version = "1", features = ["derive"]}
serde_json = {version = "1", features = ["raw_value"]}
serde_qs = "~0.11"
sha2 = "0.10"
thiserror = "1"
tokio = "1"
tokio-tungstenite = {version = "0.18", features = ["native-tls"]}
tungstenite = "0.18"
url = "2"

owning_ref = {version = "0.4", optional = true}

[dev-dependencies]
anyhow = {version = "1", features = ["backtrace"]}
env_logger = "0.10"
tokio = {version = "1", features = ["rt", "rt-multi-thread", "macros"]}
